<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WeatherFragment">


    <TextView
        android:id="@+id/WF_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WF_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/WF_first_loc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/WF_title"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/WF_temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WF_first_temp_text"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WF_first_loc_name"
        app:layout_constraintVertical_bias="0.02" />
    <TextView
        android:id="@+id/WF_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WF_first_info_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WF_temp_text"
        app:layout_constraintVertical_bias="0.02" />


    <TextView
        android:id="@+id/WF_second_loc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/WF_info_text"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/WF__second_temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WF_second_temp_text"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WF_second_loc_name"
        app:layout_constraintVertical_bias="0.02" />
    <TextView
        android:id="@+id/WF_second_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WF_second_info_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WF__second_temp_text"
        app:layout_constraintVertical_bias="0.02" />
</androidx.constraintlayout.widget.ConstraintLayout>