<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:id="@+id/map_container">
            <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:elevation="10dp"
                android:background="@drawable/white_border"
                android:id="@+id/search_rellayout"> 
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/search_field_ACT"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_baseline_search_24"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/search_field_ACT"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/input_search_ACT"
                    android:maxLines="1"
                    android:background="@null"
                    android:hint="Enter Address, City or Postcode"
                    android:imeOptions="actionSearch"/>
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/info_text_CTA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/info_text_CTA"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/datepicker_btn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            style="?android:spinnerStyle"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/choose_date_of_trip"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="20dp"

            />

        <Button
            android:id="@+id/create_trip_btn_CTA"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/create_trip_btn" />




    </LinearLayout>

</RelativeLayout>